--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "line-groq-bot",
+  "name": "line-gpt-bot3",
   "version": "1.0.0",
   "description": "A LINE Bot powered by Groq",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.0.0"
+    "axios": "^1.6.7"
   }
 }
